[tool.poetry]
name = "apifetch"
version = "0.3.0"
description = ""
authors = ["Mathieu Rey <matrey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
cchardet = "^2.1.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.4.2"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
